_css/global.css
@charset "UTF-8";
img, object, embed, video {
	max-width: 100%;
}
/* IE 6 does not support max-width so default to width 100% */
.ie6 img {
	width:100%;
}

/* Mobile Layout: 480px and below. */


/********** Overrides of default HTML styling **********/
a {
	color: green;
	font-weight: 400;
	text-decoration: inherit; /* no underline */
}

a:hover {
	color: rgb(160,64,1); /* dark orange */
	text-shadow: 0 0 0.2em #F87};
}

a:visited {
	color: inherit;
}

b, strong { 
	font-weight: 400;
}

body {
	margin: 0; 
	font-size: 15px; 
	line-height: 1.4; 
	-webkit-font-smoothing: subpixel-antialiased;
}

body, button, input, select, textarea { 
	font-family: 'Lato', sans-serif; 
	font-weight: 300; 
	color: #222;
}

h1, h2, h3, h4, h5 {
	font-family: 'Raleway', sans-serif;
	color: green;
}
h2 {
	font-size: 22px;
	padding-top: 16.5px;
	margin-bottom: 11px;
}
h3 {
	font-size: 19px;
	padding-top: 12px;
	margin-bottom: 9.5px;	
}
h4 {
	font-size: 15px;
	padding-top: 10px;
	margin-bottom: 7.5px;	
}
h5 {
	font-size: 12px;
	padding-top: 8px;
	margin-bottom: 6px;
}


/********** Custom visual styles **********/

body.gradient-logo {
	background-image: url(/_images/GreenBackground2.png);
	background-repeat: no-repeat;
	background-color: rgb(248,248,248); 
}

.no-margin {
	margin: 0, 0, 0, 0;
}

.no-padding {
	padding: 0, 0, 0, 0;
}

.text-highlight {
	margin: 25px;	
	border-radius: 15px;
/*	background-color: rgb(240,240,240); */

	font-weight: 400;
	font-style: italic;
}

.inset {
	margin-left: 20px;
	margin-right: 20px;
}


/********** Page structure **********/

  /*** Page Header ***/

.header-wrapper {
	height: 89px;
	width: 100%;
	display: table-cell;
	vertical-align: middle;

	/* Right-align the text and adjust for a small screen */
	padding-left: 180px;
	padding-right: 10px;
	padding-bottom: 5px;
	text-align: right;
	font-size: 20px;
	line-height: 20px;
}

.header-text {
	color: rgb(0,60,0); /* dark x 3 green - considerably darker than darkgreen */
	font-family: 'Raleway', sans-serif;
}


  /*** Page Content ***/

.main-wrapper {
	width: 100%;
}


     /*** Navigation Bar ***/

.nav-wrapper {
	/* Default to vertical inline */
}

.navigation {
	margin-left: 14px;
	margin-bottom: 14px;

	/* Set down from the title area */
	margin-top: 14px;
}

.nav-section {
	margin-bottom: 14px;
}

.nav-section-header {
	margin-top: 0px;
	margin-bottom: 0px;
	padding-top: 0px;
	padding-bottom: 0px;

	color: rgb(0,90,0);  /* dark x 2 green - darker than darkgreen */
	font-family: 'Raleway', sans-serif;
	font-size: 20px;
}

.nav-links {
	padding-left: 12px;
	margin-top: 2px;
}

.nav-link {
	padding-top: 5px;
	padding-bottom: 5px;
		
	color: rgb(0,60,0);  /* dark x 3 green - considerably darker than darkgreen */
	text-decoration: none;

	font-size: 16px;
	font-weight: 300;
	line-height: 16px;
}


     /*** Main Content ***/

.content-wrapper {	
	/* Default to no left margin because of vertical inline */
}

.content {
	background-color: white;
	
	/* Set down from inline navigation menu, and inset a small amount for small screens */
	margin-top: 14px;
	padding: 20px;
	
	overflow-y: auto;
}

.shadow {
	-moz-box-shadow: 0 0 10px #888;
	-webkit-box-shadow: 0 0 10px #888;
	box-shadow: 0 0 10px #888;
	/* For IE 8 */
	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=0, Color='#808080')";
	/* For IE 5.5 - 7 */
	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=10, Direction=0, Color='#808080');
}


       /*** Content Styles ***/

.content-supertitle {
	margin-top: 0px;
	padding-top: 0px;
	margin-bottom: 0px;
	padding-bottom: 0px;
}

.content-title {
	margin-top: 0px;
	padding-top: 0px;
	font-family: 'Raleway', sans-serif;
	color: rgb(0,90,0);
}

.content-meta-info {
	color: gray;
	margin-top: -10px;
	padding-top: -10px;
	font-size: 14px;
}

.book-nav {
	padding-top: 20px;
	margin-bottom: -10px;
	text-align: center;
	list-style-type: none;
}

.book-nav-back, .book-nav-up, .book-nav-forward {
	display: inline;
	white-space: nowrap;
	color: green;
	font-family: 'Raleway', sans-serif;
	font-size: 12px;
	position: relative;
	bottom: 0;
}

.book-nav-back {
	text-align: left;
}

.book-nav-up {
	text-align: center;
}

.book-nav-forward {
	text-align: right;
}

.book-nav-spacer {
	display: inline;
	padding-left: 10px;
	padding-right: 10px;
}
	

code {
	color: rgb(0, 0, 160); /* dark blue */
	font-family: 'DejaVu Sans Mono', Consolas, 'Lucida Console', Menlo, Monaco, monospace, sans-serif;
}

.restricted-width-container {
	display: block;
	white-space: nowrap;
}

.code-block {
	margin-top: 15px;
	margin-bottom: 15px;
	padding: 15px;	
	border-radius: 15px;

	font-family: 'DejaVu Sans Mono', Consolas, 'Lucida Console', Menlo, Monaco, monospace, sans-serif;
	font-size: 13px;
	display: block;
	line-height: 13px;
	overflow: auto;
	-moz-tab-size: 4;
    -o-tab-size: 4;
    tab-size: 4;
	text-align: left;
	white-space: pre;
	word-wrap: normal;

	/* Slight inset for small screen */
	margin-left: 20px;
	margin-right: 20px;
}

.bad-code {
	background-color: rgb(255, 221, 244); /* reds */
	color: rgb(112, 32, 32);
}

.good-code {
	background-color: rgb(226, 232, 255); /* blues */
	color: rgb(0, 0, 160);
}

.neutral-code {
	background-color: #eeeeee; /* light grey */
	color: rgb(0, 0, 160); /* dark blue */
}


.console {
	background-color: #000000; /* black */
	color: #ffffff; /* white */
}

.book-navigation {
	display: block;
	height: 39px;
}

.scrolling {
	overflow: auto;
}

  /*** Footer ***/

.footer-wrapper {
	width: 100%;
}

.footer{
	margin-left: 14px;
	margin-right: 14px;
	margin-bottom: 20px;
	padding-top: 20px;
	color: gray;

	/* Center align on small screen */
	text-align: center;
}



/* Tablet Layout: 481px to 768px. Inherits styles from: Mobile Layout. */

@media only screen and (min-width: 768px) {

	.header-wrapper {
		/* Left-align text against the logo */
		padding-left: 184px; 
		text-align: left;
		font-size: 24px;	
		line-height: 23px;
	}


	.nav-wrapper {
		/* Float to the left of the content */
		float: left;
	}
	
	.navigation {
		/* Readjust for left float */
		margin-top: 0px;
	}
	
	
	.content-wrapper {	
		/* To allow for floated navigation pane */
		margin-left: 150px;
	}
		
	.content {
		/* Set the white content pane in from the sides of the page, and have a minimum height that is no shorter than the navigation menu*/
		margin: 20px;
		min-height: 150px;

	}
	
	.code-block {
		/* Set in farther since the page is larger */
		margin-left: 35px;
		margin-right: 35px;
	}
}

/* Smaller-monitor Desktop Layout: 1000px and up.  Inherits styles from: Mobile Layout and Tablet Layout. */

@media only screen and (min-width: 1000px) {
	.nav-link {
	}

	.content-wrapper {	
		/* Larger space induces a right margin */
		margin-right: 150px;
	}

	.content {
		/* Increased padding when the screen width is a reasonable size */
		padding: 40px;
	}
	
	.code-block {
		/* Set in even more fartherer since the page is way big */
		margin-left: 45px;
		margin-right: 45px;
	}
	
}

